--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,106 @@
-   fastapi
-   uvicorn
-   # Add other dependencies here, for example:
-   # stripe
-   # requests
-   # pytest
-   # ...
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anthropic==0.49.0
+anyio==4.8.0
+asttokens==3.0.0
+attrs==25.3.0
+bcrypt==4.3.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+dataclasses-json==0.6.7
+decorator==5.2.1
+distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
+executing==2.2.0
+fastapi==0.115.12
+Flask==3.1.0
+fonttools==4.56.0
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+iniconfig==2.1.0
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+kiwisolver==1.4.8
+langchain==0.3.21
+langchain-anthropic==0.3.10
+langchain-community==0.3.20
+langchain-core==0.3.51
+langchain-openai==0.3.11
+langchain-text-splitters==0.3.7
+langgraph==0.3.11
+langgraph-checkpoint==2.0.20
+langgraph-prebuilt==0.1.3
+langgraph-sdk==0.1.57
+langsmith==0.3.28
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+msgpack==1.1.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+numpy==2.2.4
+openai==1.68.2
+optional==0.0.1
+orjson==3.10.15
+packaging==24.2
+parso==0.8.4
+passlib==1.7.4
+pexpect==4.9.0
+pillow==11.1.0
+pluggy==1.5.0
+prompt_toolkit==3.0.50
+propcache==0.3.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pydantic==2.11.3
+pydantic-settings==2.8.1
+pydantic_core==2.33.1
+Pygments==2.19.1
+pyparsing==3.2.2
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+setuptools==78.1.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.39
+stack-data==0.6.3
+starlette==0.46.1
+stripe==12.0.0
+tavily-python==0.5.1
+tenacity==8.5.0
+tiktoken==0.9.0
+tqdm==4.67.1
+traitlets==5.14.3
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+wheel==0.45.1
+yarl==1.18.3
+zstandard==0.23.0
